[package]
name = "linkprovider"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
async-trait = { version = "0.1", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false, features = [ "std" ] }
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "sync", "time", "parking_lot" ], default-features = false }
pnet = { version = "0.30", default-features = false, features = [ "std" ] }
quinn = "0.8.3"