[package]
name = "linkprovider"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1", default-features = false }
futures-util = { version = "0.3", default-features = false }
pnet = { version = "0.31", default-features = false, features = [ "std" ] }
protocol = { path = "../protocol" }
quinn = { version = "0.8", default-features = false, features = [ "default", "ring" ] }
rcgen = { version = "0.9", default-features = false }
rustls = { version = "0.20", default-features = false, features = [ "dangerous_configuration" ] }
serde = { version = "1", default-features = false, features = [ "derive", "alloc", "rc" ] }
serde_json = { version = "1", default-features = false, features = [ "alloc", "arbitrary_precision", "raw_value", "unbounded_depth", "preserve_order" ] }
tokio = { version = "1", features = [ "macros", "rt", "sync", "time", "parking_lot", "net" ], default-features = false }
